# deeplearningfr

./: .gitignore  CMakeLists.txt  README.md  build.sh  dependencies.yml
python/: gradmtest.py  mnist_classifier.py  sample1.py  trans_test.py
src/: DataLoader.cpp  DataLoader.h  Dataset.cpp  Dataset.h  GradMode.cpp  GradMode.hpp  Graph.cpp  Graph.h  Layer.cpp  Layer.h  Loss.cpp  Loss.h  ModelInference.cpp  ModelInference.h  Optimizer.cpp  Optimizer.h  Tensor.cu  Tensor.cuh  Utils.cpp  Utils.h  deeplearning.cpp  main.cpp  run.sh
